--- a/login.html
+++ b/login.html
@@ -10,15 +10,15 @@
   </head>
   <body class="login-bg">
     <div id="auth" class="flex flex-col items-center justify-center min-h-screen">
+      <img src="/public/cerchi-olimpici-logo.png" alt="Cerchi Olimpici" style="width:200px;max-width:90vw;margin-bottom:1.5rem;" />
       <h1 class="text-4xl md:text-5xl font-extrabold text-center mb-8 tracking-wide text-primary drop-shadow-lg" style="letter-spacing:0.05em;">Olimpiadi nel mondo</h1>
       <div class="card w-96 bg-base-100 shadow-2xl border border-primary/30">
         <div class="card-body">
-          <h2 class="card-title justify-center">Accedi</h2>
           <form id="loginForm" class="space-y-4">
             <input type="email" id="email" placeholder="Email" class="input input-bordered w-full" required>
             <input type="password" id="password" placeholder="Password" class="input input-bordered w-full" required>
             <div class="flex justify-between">
-              <button type="submit" class="btn btn-primary">Accedi</button>
+              <button type="submit" class="btn btn-primary" style="background-color: rgb(1, 120, 231);border-color: rgb(1, 120, 231);">Accedi</button>
               <a href="/register.html" class="btn btn-link">Registrati</a>
             </div>
           </form>
