--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
             <input type="password" id="registerPassword" placeholder="Password" class="input input-bordered w-full" required>
             <input type="password" id="registerPasswordConfirm" placeholder="Ripeti password" class="input input-bordered w-full" required>
             <input type="file" id="registerAvatar" accept="image/*" class="file-input file-input-bordered w-full" />
-            <div class="flex justify-between">
+            <div class="flex justify-between" style="margin-top: 16px;">
               <a href="/login.html" class="btn btn-link">Accedi</a>
               <button type="submit" class="btn btn-secondary" style="background-color: rgb(1, 5, 231);border-color: rgb(1, 5, 231);">Registrati</button>
             </div>
