--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
           <form id="loginForm" class="space-y-4">
             <input type="email" id="email" placeholder="Email" class="input input-bordered w-full" required>
             <input type="password" id="password" placeholder="Password" class="input input-bordered w-full" required>
-            <div class="flex justify-between">
+            <div class="flex justify-between" style="margin-top: 16px;">
               <button type="submit" class="btn btn-primary" style="background-color: rgb(1, 120, 231);border-color: rgb(1, 120, 231);">Accedi</button>
               <a href="/register.html" class="btn btn-link">Registrati</a>
             </div>
